Worked on ReadMe. Working on dark mode ft. Fixed sticky nav bar

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -297,3 +297,7 @@ input:checked + .slider:before {
   color: white;
   text-decoration: none;
 }
+
+#navOverEverything {
+  z-index: 2;
+}
